Added working service

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "one-school",
-  "version": "0.0.0",
+  "name": "oneschool",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,7 +26,9 @@
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
     "@angular/cli": "1.2.1",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
@@ -46,6 +48,5 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  },
-  "devDependencies": {}
+  }
 }
