--- a/package.json
+++ b/package.json
@@ -25,17 +25,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "body-parser": "^1.18.2",
-    "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "mongodb": "^2.2.33",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "body-parser": "^1.18.2",
     "codelyzer": "~3.0.1",
     "compression": "^1.7.1",
+    "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -44,10 +41,14 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mongodb": "^2.2.33",
+    "mongojs": "^2.4.1",
     "protractor": "~5.1.2",
+    "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "zone.js": "^0.8.4"
   },
   "engines": {
     "node": "6.11.0",
