--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "mongodb": "^2.2.33",
     "mongojs": "^2.4.1",
+    "morgan": "^1.9.0",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
